# sahayakai

./: .env  .gitignore  BUSINESS_PROPOSAL.md  CHALLENGING_QUESTIONS.md  FEATURES.md  FLUTTER_ARCHITECTURE_PLAN.md  GEMINI.md  PROBLEM_SOLUTION.md  README.md  RURAL_ADAPTATION_SUMMARY.md  SOLUTION_ARCHITECTURE.md  SahayakAI.md  SahayakAI_Whitepaper_2026.md  USER_EXPERIENCE_FLOW.md  agent.md  email-composer.skill  gemini.md  jest.config.ts  jest.setup.ts  list_branches.py  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.gemini/: INTELLIGENCE.md  TOKEN_STRATEGY.md  (+1 more)
sahayakai-agents/: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
sahayakai-agents/.github/workflows/: sahayakai-agents.yml
sahayakai-agents/cloud_functions/auto_abort/: README.md  main.py  requirements.txt  test_demote.py  test_entrypoints.py
sahayakai-agents/cloud_functions/auto_abort/policy_templates/: 01_error_rate.yaml  02_p95_latency.yaml  03_behavioural_guard_502.yaml  04_shadow_diff_labse.yaml  05_session_conflict_409.yaml  06_gemini_spend.yaml
sahayakai-agents/cloud_functions/shadow_diff_aggregator/: README.md  main.py  requirements.txt  test_score_pair.py
sahayakai-agents/deploy/: cloudbuild.yaml  service.yaml
sahayakai-agents/docs/: RUNBOOK.md
sahayakai-agents/docs/adr/: 0001-in-process-supervisor-delegation.md  0002-four-mode-dispatcher-pattern.md  0003-firestore-flag-plane.md  0004-pydantic-googlegenai-no-defaults.md
sahayakai-agents/docs/agents/: avatar-generator.md  exam-paper.md  instantAnswer.md  lesson-plan.md  parent-call.md  parent-message.md  quiz-generator.md  rubric-generator.md  teacher-training.md  video-storyteller.md  vidya.md  virtual-field-trip.md  visual-aid-designer.md  voice-to-text.md  worksheet-wizard.md
sahayakai-agents/evals/: README.md  __init__.py  run_evals.py  scorer.py
sahayakai-agents/evals/golden_set/: instant_answer.json  lesson_plan.json  parent_call.json  parent_message.json  vidya.json  virtual_field_trip.json
sahayakai-agents/prompts/assessment-scanner/: pass1.handlebars  pass2.handlebars
sahayakai-agents/prompts/assignment-assessor/: generator.handlebars
sahayakai-agents/prompts/avatar-generator/: portrait.handlebars
sahayakai-agents/prompts/community-persona-message/: generator.handlebars
sahayakai-agents/prompts/exam-paper/: generator.handlebars
sahayakai-agents/prompts/instant-answer/: answerer.handlebars
sahayakai-agents/prompts/lesson-plan/: evaluator.handlebars  reviser.handlebars  writer.handlebars
sahayakai-agents/prompts/parent-call/: reply.handlebars  summary.handlebars
sahayakai-agents/prompts/parent-message/: generator.handlebars
sahayakai-agents/prompts/quiz/: generator.handlebars
sahayakai-agents/prompts/rubric/: generator.handlebars
sahayakai-agents/prompts/teacher-training/: advisor.handlebars
sahayakai-agents/prompts/video-storyteller/: recommender.handlebars
sahayakai-agents/prompts/vidya/: instant_answer.handlebars  orchestrator.handlebars
sahayakai-agents/prompts/virtual-field-trip/: planner.handlebars
sahayakai-agents/prompts/visual-aid/: image.handlebars  metadata.handlebars
sahayakai-agents/prompts/voice-to-text/: transcriber.handlebars
sahayakai-agents/prompts/worksheet/: wizard.handlebars
sahayakai-agents/scripts/: aggregate_shadow_diffs.py  apply-firestore-ttl.sh  bootstrap-track-d.sh  codegen_ts.py  compare_parity.py  erase-parent-data.py  generate-signing-key.sh  generate_capability_docs.py  grant-nextjs-invoker.sh  hydrate-audience-secret.sh  post-deploy-smoke.sh  preflight-shadow-ramp.sh  seed-feature-flags.sh  smoke-test-sidecar.sh  track-c-prework.sh
sahayakai-agents/spikes/gemini_live/: README.md  audio.py  latency_benchmark.py  test_audio.py
sahayakai-agents/spikes/gemini_live_voice/: SPIKE.md
sahayakai-agents/src/sahayakai_agents/: __init__.py  _adk_keyed_gemini.py  _behavioural.py  agent_card.py  auth.py  config.py  logging_config.py  main.py  resilience.py  session_store.py  telemetry.py
sahayakai-agents/tests/: conftest.py
sahayakai-agents/tests/behavioral/: test_identity_rules.py  test_instant_answer_guard.py  test_lesson_plan_rules.py  test_parent_message_guard.py  test_rubric_guard.py  test_vidya_rules.py
sahayakai-agents/tests/fixtures/: __init__.py  parametrized_languages.py
sahayakai-agents/tests/integration/: test_avatar_generator_router.py  test_exam_paper_router.py  test_instant_answer_router.py  test_language_matrix.py  test_lesson_plan_router.py  test_parent_call_reply.py  test_parent_message_router.py  test_quiz_router.py  test_rubric_router.py  test_size_boundaries.py  test_teacher_training_router.py  test_video_storyteller_router.py  test_vidya_router.py  test_vidya_voice_router.py  test_virtual_field_trip_router.py  test_visual_aid_router.py  test_voice_to_text_router.py  test_worksheet_router.py
sahayakai-agents/tests/unit/: fake_firestore.py  test_action_flow_ts_parity.py  test_agent_card.py  test_agent_card_against_a2a_spec.py  test_app_check_middleware.py  test_assessment_scanner_agent.py  test_assignment_assessor_agent.py  test_auth.py  test_auth_idtoken.py  test_auth_replay_window.py  test_avatar_adk.py  test_community_persona_message_agent.py  test_exam_paper_adk.py  test_gemini_schema.py  test_instant_answer_agent.py  test_instant_answer_schemas.py  test_lesson_plan_adk.py  test_lesson_plan_agent.py  test_parent_call_agent.py  test_parent_message_adk.py  test_parent_message_schemas.py  test_prompt_safety.py  test_pydantic_element_bounds.py  test_quiz_adk.py  test_quiz_agent_helpers.py  test_rag_schemas.py  test_request_id_middleware.py  test_resilience.py  test_resilience_per_call_timeout.py  test_retriever.py  test_rubric_adk.py  test_rubric_schemas.py  test_schemas.py  test_session_store.py  test_teacher_training_adk.py  test_video_storyteller_adk.py  test_vidya_adk_runtime.py  test_vidya_agent.py  test_vidya_p99_under_budget.py  test_vidya_registry.py  (+5 more)
sahayakai-main/services/voice-server/: .env.example  .gitignore  Dockerfile  pyproject.toml  test_call.py
(+2540 files in other folders)
