[project]
name = "sahayakai-agents"
version = "0.1.0"
description = "Python sidecar for SahayakAI stateful and voice AI agents (ADK-Python 1.0 on FastAPI)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Abhishek Gupta", email = "abhi.ist.15@gmail.com" },
]

# Pinned exact-or-compatible per review Round 1 decisions.
# - google-adk ==1.0.0 (GA, pinned per parent plan §4)
# - google-genai pinned explicitly, not left transitive (P1 #16)
dependencies = [
  "google-adk==1.0.0",
  "google-genai==0.10.0",
  "fastapi~=0.115",
  "uvicorn[standard]~=0.32",
  "pydantic~=2.9",
  "pydantic-settings~=2.6",
  "google-cloud-firestore~=2.19",
  "google-cloud-secret-manager~=2.21",
  "google-auth~=2.35",
  "firebase-admin~=6.6",
  "opentelemetry-distro~=0.48b0",
  "opentelemetry-instrumentation-fastapi~=0.48b0",
  "opentelemetry-exporter-gcp-trace~=1.8",
  "httpx~=0.27",
  "pystache~=0.6",
  "structlog~=24.4",
  "langdetect~=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3",
  "pytest-asyncio~=0.24",
  "pytest-cov~=5.0",
  "respx~=0.21",
  "mypy~=1.13",
  "ruff~=0.7",
  "pre-commit~=4.0",
]
eval = [
  "sentence-transformers~=3.2",
  "torch~=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sahayakai_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast, no external calls",
  "integration: FastAPI endpoint with mocked Gemini + Firestore",
  "behavioral: pedagogy / identity / language rules (P0 tests)",
  "parity: parity with Genkit outputs over recorded fixtures",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]  # many kw-args is fine for agent schemas

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true  # adk / pystache have lagging stubs
