[project]
name = "sahayakai-agents"
version = "0.1.0"
description = "Python sidecar for SahayakAI stateful and voice AI agents (ADK-Python 1.0 on FastAPI)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Abhishek Gupta", email = "abhi.ist.15@gmail.com" },
]

# Pinned to latest stable per Round-2 audit findings (Apr 2026).
# - google-adk: was ==1.0.0 (31 minor versions stale, missed CVE-2026-4810).
#   Now ~=1.31 (current 1.31.1, bi-weekly cadence).
# - google-genai: was ==0.10.0 (which does not exist on PyPI — fictitious pin).
#   Now >=1.73,<2.0 (current 1.73.1, Apr 14 2026 release).
#   See https://pypi.org/project/google-genai/ and SDK reference
#   https://googleapis.github.io/python-genai/.
dependencies = [
  "google-adk~=1.31",
  "google-genai>=1.73,<2.0",
  "fastapi~=0.115",
  "uvicorn[standard]~=0.32",
  "pydantic~=2.9",
  "pydantic-settings~=2.6",
  "google-cloud-firestore~=2.19",
  "google-cloud-secret-manager~=2.21",
  "google-auth~=2.35",
  "firebase-admin~=6.6",
  "opentelemetry-distro~=0.48b0",
  "opentelemetry-instrumentation-fastapi~=0.48b0",
  "opentelemetry-exporter-gcp-trace~=1.8",
  "httpx~=0.27",
  # Round-2 audit P0 PROMPT-1: was `pystache~=0.6` but Mustache cannot
  # parse `{{#if x}}...{{/if}}` (Handlebars-only). pybars3 is a real
  # Handlebars implementation that matches Genkit's Node renderer.
  "pybars3~=0.9",
  "structlog~=24.4",
  "langdetect~=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3",
  "pytest-asyncio~=0.24",
  "pytest-cov~=5.0",
  "respx~=0.21",
  "mypy~=1.13",
  "ruff~=0.7",
  "pre-commit~=4.0",
]
eval = [
  "sentence-transformers~=3.2",
  "torch~=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sahayakai_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast, no external calls",
  "integration: FastAPI endpoint with mocked Gemini + Firestore",
  "behavioral: pedagogy / identity / language rules (P0 tests)",
  "parity: parity with Genkit outputs over recorded fixtures",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]  # many kw-args is fine for agent schemas

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true  # adk / pybars3 have lagging stubs
